--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-nav{
+.nav{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,36 +13,36 @@ nav{
     color: white;
     height: 103vh;
 }
-nav img{
+.nav img{
     border-radius: 200px;
     margin-bottom: 30px;
 }
-nav h1{
+.nav h1{
     margin-left: 40px;
     margin-top: 20px;
     margin-bottom: 30px;
 }
-nav p{
+.nav p{
     margin-bottom: 5px;
     margin-left: 20px;
 }
-nav ul{
+.nav ul{
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin-bottom: 10px;
 }
-nav ul li{
+.nav ul li{
     list-style: none;
 }
-nav ul li a{
+.nav ul li a{
     text-decoration: none;
     color: white;
 }
-nav ul li a i{
+.nav ul li a i{
     margin-right: 10px;
 }
-nav ul li:last-child{
+.nav ul li:last-child{
     margin-top: 50px;
 }
 .container{
@@ -127,6 +127,7 @@ nav ul li:last-child{
     align-items: center;
     justify-content: space-between;
     margin: 0px 20px;
+    flex-wrap: wrap;
 }
 .div_2 .side1 h1{
     margin: 30px 40px 0px 30px;
@@ -153,5 +154,90 @@ nav ul li:last-child{
 }
 .div3{
     background-color:rgb(241,238,228);
+}
+@media (max-width:1246px) {
+    .container .div_1 .upper input{
+        height: 50px;
+        width: auto;
+    }
+    .upper_1 img{
+        margin-left: 0px;
+        width:30%;
+    }
+    .div_2 .side1 img{
+        width: 80%;
+    }
+    body{
+        overflow-x: hidden;
+    }
+    .container{
+        height: auto;
+    }
+    .box img {
+        height: 150px;
+        margin-left: 0px;
+    }
+}
+@media (max-width:1019px){
+    .nav h2{
+        font-size: 18px ;
+        margin-left: 10px;
+    }
+    .nav img{
+        width: 80%;
+        margin-left: 10px;
+    }
+    .div_2 .side3 p{
+        font-size: 12px;
+    }
+    .btn_1{
+        font-size: 10px;
+    }
+    .btn_2{
+        font-size: 10px;
+    }
+    .box_2 p{
+        font-size: 12px;
+    }
+    
+}
+@media (max-width:823px){
+    .container{
+        flex-direction: column;
+    }
+    .container .div_1{
+        width: 100%;
+    }
+    .div_2{
+        display: none;
+    }
+    .nav ul li a{
+        display: none;
+    }
+    .nav p{
+        display: none;
+    }
+    .nav h2{
+        display: none;
+    }
+    .nav h1{
+        display: none;
+    }
+    .nav img{
+        margin-top: 20px;
+    }
+    .nav{
+        height: 99vh;
+    }
+    .box h1{
+        font-size: 30px;
+    }
+    .btn_1{
+        font-size: 8px;
+    }
+    .btn_2{
+        font-size: 8px;
+    }
+    
 }
 
